<resources>
    <string name="app_name">WhereToEat</string>
    <string name="restaurants_list">Liste des restaurants</string>
    <string name="search_hint">Recherche …</string>
    <string name="filter">Filtres</string>
    <string name="add_a_restaurant">Ajouter un restaurant :</string>
    <string name="restaurant_name_hint">Nom du restaurant …</string>
    <string name="add_the_restaurant">Ajouter le restaurant</string>
    <string name="meal_form_title">Repas du</string>
    <string name="meal_name_hint">Ajouter le nom du repas …</string>
    <string name="add_a_mark">Ajouter une note :</string>
    <string name="meal_price_hint">Ajouter le prix …</string>
    <string name="meal_description_hint">Ajouter une description …</string>
    <string name="add_the_meal">Ajouter un repas :</string>
    <string name="restaurant_title_meal_form">Nom du restaurant</string>
    <string name="mark">Note :</string>
    <string name="option_title">Options</string>
    <string name="add_map_btn">Ajouter un restaurant</string>
    <string name="click_map_btn">Cliquez sur la carte</string>
</resources>