<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_title"
            android:text="@string/restaurant_title_meal_form"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="normal|bold|italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:text="@string/meal_form_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meal_title"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/meal_name_hint"
            android:id="@+id/meal_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/meal_price_hint"
            android:id="@+id/meal_price"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:hint="@string/meal_description_hint"
            android:id="@+id/meal_description"
            android:gravity="top"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_a_mark"
                android:layout_weight="2"
                android:textSize="18sp" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/markSpinner"
                android:layout_weight="1"
                android:id="@+id/meal_mark_spinner">

            </Spinner>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_the_meal"
            android:layout_gravity="bottom"
            android:id="@+id/add_meal_form"/>

    </LinearLayout>
</LinearLayout>
