<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_title"
            android:text="@string/restaurant_title_meal_form"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="normal|bold|italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:text="@string/meal_form_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meal_title"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meal_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meal_price"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="5"
            android:id="@+id/meal_description"
            android:gravity="top"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mark"
                android:layout_weight="2"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/meal_mark">

            </TextView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
